<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:clickable="false"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/design_default_color_primary_dark"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_blank"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:paddingLeft="5dp"
            android:paddingTop="15dp"
            android:paddingBottom="5dp"
            android:textAlignment="viewStart"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/mon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:paddingStart="8dp"
            android:paddingTop="15dp"
            android:paddingBottom="5dp"
            android:text="@string/table_mon"
            android:textAlignment="viewStart"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tues"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:paddingStart="8dp"
            android:paddingTop="15dp"
            android:paddingBottom="5dp"
            android:text="@string/table_tue"
            android:textAlignment="viewStart"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/wed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:paddingStart="8dp"
            android:paddingTop="15dp"
            android:paddingBottom="5dp"
            android:text="@string/table_wed"
            android:textAlignment="viewStart"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/thurs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:paddingStart="8dp"
            android:paddingTop="15dp"
            android:paddingBottom="5dp"
            android:text="@string/table_thurs"
            android:textAlignment="viewStart"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/fri"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:paddingStart="8dp"
            android:paddingTop="15dp"
            android:paddingBottom="5dp"
            android:text="@string/table_fri"
            android:textAlignment="viewStart"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

    </LinearLayout>

    <ListView
        android:id="@+id/lv_timetable"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_list" />
</LinearLayout>